--- a/index.html
+++ b/index.html
@@ -1,221 +1,195 @@
-<!DOCTYPE html>
-<html lang="my">
+   <!DOCTYPE html>
+<html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Smile One MM Calculator - HL Digital Product</title>
-  <meta name="description" content="Smile One Myanmar Calculator - HL Digital Product">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>MLBB BRL Coin Table Calculator</title>
   <style>
-    /* Dark theme base */
     body {
-      background: #181a20;
-      color: #f4f4f4;
-      font-family: 'Segoe UI', Arial, sans-serif;
-      margin: 0;
-      padding: 0;
-    }
-    .container {
-      max-width: 500px;
-      margin: 32px auto;
-      background: #23272f;
-      box-shadow: 0 8px 24px #0004, 0 1.5px 8px #0002;
-      border-radius: 12px;
-      padding: 2em 1em 0.5em 1em;
-    }
-    .badge {
-      display: inline-block;
-      background: #24292f;
-      color: #f1c40f;
-      border-radius: 6px;
-      padding: 8px 20px;
-      font-weight: bold;
-      font-size: 20px;
-      margin-bottom: 24px;
-      letter-spacing: 1px;
-    }
-    h1 {
-      text-align: center;
-      font-size: 2.2em;
-      margin-bottom: 0.2em;
-      color: #f4f4f4;
-    }
-    .links {
-      display: flex;
-      flex-direction: column;
-      gap: 10px;
-      margin: 24px 0;
-    }
-    .links a {
-      display: block;
-      text-align: center;
-      padding: 10px;
-      border-radius: 6px;
-      background: #20242b;
-      color: #58a6ff;
-      text-decoration: none;
-      font-weight: 500;
-      border: 1px solid #30363d;
-      transition: background 0.2s, color 0.2s;
-    }
-    .links a:hover {
-      background: #1d2127;
-      color: #f1c40f;
-    }
-    .calculator {
-      margin: 30px 0;
-      text-align: center;
-    }
-    .calculator input, .calculator select {
-      padding: 8px;
-      margin: 6px 0;
-      border-radius: 6px;
-      border: 1px solid #484848;
-      background: #181a20;
-      color: #fff;
-      width: 64%;
-      font-size: 1em;
-    }
-    .calculator button {
-      padding: 8px 22px;
-      border-radius: 6px;
-      border: none;
-      background: #58a6ff;
-      color: #181a20;
-      font-size: 1em;
-      font-weight: bold;
-      cursor: pointer;
-      margin-top: 12px;
-      transition: background 0.2s;
-    }
-    .calculator button:hover {
-      background: #1d2127;
-      color: #f1c40f;
-    }
-    .result {
-      margin-top: 18px;
-      font-size: 1.2em;
-      color: #f1c40f;
-    }
-    .table-container {
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      padding: 6px;
+      max-width: 100%;
       overflow-x: auto;
-      margin: 30px 0;
     }
     table {
       width: 100%;
       border-collapse: collapse;
-      background: #23272f;
-      color: #f4f4f4;
-      border-radius: 8px;
-      overflow: hidden;
-      margin-top: 12px;
+      background: white;
+      font-size: 11px;
     }
     th, td {
-      padding: 12px 8px;
+      border: 1px solid #999;
+      padding: 3px;
       text-align: center;
-      border-bottom: 1px solid #30363d;
     }
-    th {
-      background: #181a20;
-      color: #f1c40f;
+    input, select {
+      padding: 3px;
+      font-size: 12px;
+      margin: 5px 0;
+      width: 100%;
+      box-sizing: border-box;
     }
-    tr:last-child td {
-      border-bottom: none;
+    #profitSelect {
+      font-size: 10px;
     }
-    @media (max-width: 600px) {
-      .container { padding: 1em 0.5em 0.5em 0.5em; }
-      table, th, td { font-size: 0.98em; }
-      .calculator input { width: 90%; }
+    .container {
+      max-width: 100%;
+      overflow-x: auto;
     }
-  </style>
-</head>
-<body>
+    .topbar {
+      color: white;
+      padding: 6px;
+      font-size: 14px;
+      font-weight: bold;
+    }
+    .double-dp {
+      color: white;
+      font-weight: bold;
+    }
+    
+  </div>
+
+  <h2 style="font-size: 15px;">💰 MLBB BRL Coin Table Calculator</h2>
+  <label>ကိုယ်ဝယ်ခဲ့တဲ့Smile 1k codeစျေး ထည့်ပါ:</label>
+  <input type="number" id="mmkInput" placeholder="ဥပမာ - 7****" />
+
+  <label>အမြတ် % ရွေးပါ:</label>
+  <select id="profitSelect"></select>
+
   <div class="container">
-    <div class="badge">HL Digital Product</div>
-    <h1>Smile One MM Calculator</h1>
+    <table>
+      <thead>
+        <tr>
+          <th>No.</th>
+          <th>Dia Plan</th>
+          <th>Org Dia Plan</th>
+          <th>Coin Price</th>
+          <th>MMK Result</th>
+          <th>အမြတ်</th>
+          <th>Total MMK</th>
+        </tr>
+      </thead>
+      <tbody id="tableBody"></tbody>
+    </table>
+  </div>
 
-    <div class="links">
-      <a href="https://t.me/HLdigitalproduct" target="_blank">ဆက်သွယ်ရန်</a>
-      <a href="https://t.me/HLdigitalproduct" target="_blank">Smile One ဝယ်ယူရန်</a>
-      <a href="https://t.me/HLdigitalproduct" target="_blank">Channel Join မယ်</a>
-      <a href="https://t.me/HLdigitalproduct" target="_blank">Diamond ထည့်မယ်</a>
-    </div>
-
-    <div class="calculator">
-      <label for="amountMMK">ငွေပမာဏ (ကျပ်):</label><br>
-      <input type="number" id="amountMMK" placeholder="ဥပမာ - 5000"><br>
-      <label for="diamondType">Diamond အမျိုးအစား:</label><br>
-      <select id="diamondType">
-        <option value="normal">Normal</option>
-        <option value="event">Event</option>
-      </select><br>
-      <button onclick="calculateDiamond()">တွက်မယ်</button>
-      <div class="result" id="result"></div>
-    </div>
-
-    <div class="table-container">
-      <table>
-        <thead>
-          <tr>
-            <th>Diamond</th>
-            <th>Normal Price (MMK)</th>
-            <th>Event Price (MMK)</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr><td>100</td><td>2200</td><td>2100</td></tr>
-          <tr><td>210</td><td>4500</td><td>4300</td></tr>
-          <tr><td>530</td><td>11100</td><td>10600</td></tr>
-          <tr><td>1080</td><td>22200</td><td>21300</td></tr>
-          <tr><td>2200</td><td>44800</td><td>43000</td></tr>
-          <tr><td>5600</td><td>112000</td><td>108000</td></tr>
-        </tbody>
-      </table>
-    </div>
-
-    <p style="text-align: center; color: #888; font-size: 0.95em;">
-      Powered by <a href="https://t.me/HLdigitalproduct" style="color: #58a6ff;">HL Digital Product</a>
-    </p>
+  <br>
+  <div style="font-size: 12px;">
+    <a href="https://t.me/HLdigitalproduct" target="_blank">
+      <button style="background-color:#000000; color:white; padding:6px 12px; border:none; border-radius:5px; font-size:12px; cursor:pointer;">
+        📞 ဆက်သွယ်ရန်
+      </button>
+    </a>
+    <br><br>
+    <a href="https://t.me/HLdigitalproduct" target="_blank">
+      <button style="background-color:#000000; color:white; padding:6px 12px; border:none; border-radius:5px; font-size:12px; cursor:pointer;">
+        🛒 Smile One ဝယ်ယူရန်
+      </button>
+    </a>
   </div>
 
   <script>
-    // Diamond price table
-    const priceTable = [
-      { diamond: 100, normal: 2200, event: 2100 },
-      { diamond: 210, normal: 4500, event: 4300 },
-      { diamond: 530, normal: 11100, event: 10600 },
-      { diamond: 1080, normal: 22200, event: 21300 },
-      { diamond: 2200, normal: 44800, event: 43000 },
-      { diamond: 5600, normal: 112000, event: 108000 }
+    // Insert 0% to 15% options in 0.5 step
+    const profitSelect = document.getElementById("profitSelect");
+    for (let i = 0; i <= 30; i++) {
+      const val = (i * 0.5).toFixed(1).replace(".0", "");
+      const opt = document.createElement("option");
+      opt.value = val;
+      opt.textContent = val + "%";
+      profitSelect.appendChild(opt);
+    }
+
+    const plans = [
+      ['Weekly Pass', '', 76], ['Twilight Pass', '', 402.5], ['86', '78+8', 61.5],
+      ['172', '156+16', 122], ['257', '234+23', 177.5], ['343', '257+86', 239],
+      ['429', '257+172', 299.5], ['514', '257+257', 355], ['600', '514+86', 416.5],
+      ['706', '625+81', 480], ['878', '706+172', 602], ['963', '706+257', 657.5],
+      ['1049', '706+343', 719], ['1135', '706+429', 779.5],
+      ['1412', '706+706', 960], // ✅ Added here
+      ['2195', '1860+335', 1453], ['2901', '2195+706', 1933],
+      ['3688', '3099+589', 2424], ['5532', '4649+883', 3660],
+      ['9288', '7740+1548', 6079], ['50+', '', 39], ['150+', '', 116.9],
+      ['250+', '', 187.5], ['500+', '', 385]
     ];
 
-    function calculateDiamond() {
-      const amount = parseInt(document.getElementById('amountMMK').value, 10);
-      const type = document.getElementById('diamondType').value;
-      if (isNaN(amount) || amount <= 0) {
-        document.getElementById('result').textContent = "ကျေးဇူးပြု၍ မှန်ကန်သော ငွေပမာဏထည့်ပါ။";
-        return;
-      }
-      // Find the max diamond pack user can buy
-      let resultText = "";
-      let found = false;
-      for (let i = priceTable.length - 1; i >= 0; i--) {
-        const item = priceTable[i];
-        const price = type === "event" ? item.event : item.normal;
-        if (amount >= price) {
-          const packs = Math.floor(amount / price);
-          const rem = amount - packs * price;
-          resultText = `သင်ဝယ်နိုင်သော Diamond: <span style="color:#f1c40f">${item.diamond * packs}</span> (x${packs} pack)
-          <br>အသုံးပြုမည့်ငွေ: <span style="color:#f1c40f">${packs * price} ကျပ်</span>
-          <br>ကျန်ငွေ: <span style="color:#f1c40f">${rem} ကျပ်</span>`;
-          found = true;
-          break;
+    const tbody = document.getElementById('tableBody');
+    const mmkInput = document.getElementById('mmkInput');
+
+    function createTable() {
+      tbody.innerHTML = '';
+      plans.forEach((plan, index) => {
+        const tr = document.createElement('tr');
+        if (plan[0] === '50+') {
+          const td = document.createElement('td');
+          td.colSpan = 7;
+          td.className = 'double-dp';
+          td.textContent = 'Double Dia Plan';
+          const trBreak = document.createElement('tr');
+          trBreak.appendChild(td);
+          tbody.appendChild(trBreak);
         }
-      }
-      if (!found) {
-        resultText = "သင့်ငွေဖြင့် Diamond ဝယ်ယူလို့မရပါ။";
-      }
-      document.getElementById('result').innerHTML = resultText;
+
+        const mmkResult = document.createElement('td');
+        const profitCell = document.createElement('td');
+        const totalCell = document.createElement('td');
+
+        tr.innerHTML = `
+          <td>${index + 1}</td>
+          <td>${plan[0]}</td>
+          <td>${plan[1]}</td>
+          <td>${plan[2]}</td>
+        `;
+        tr.appendChild(mmkResult);
+        tr.appendChild(profitCell);
+        tr.appendChild(totalCell);
+        tbody.appendChild(tr);
+      });
     }
+
+    function updateTable() {
+      const mmk = parseFloat(mmkInput.value);
+      const refBRL = 1000;
+      const percent = parseFloat(profitSelect.value);
+      const rows = tbody.querySelectorAll('tr');
+
+      let dataIndex = 0;
+      for (let i = 0; i < rows.length; i++) {
+        const cells = rows[i].children;
+        if (cells.length < 7) continue;
+
+        const coinPrice = parseFloat(plans[dataIndex][2]);
+        const mmkValue = ((mmk / refBRL) * coinPrice).toFixed(2);
+        const profit = (mmkValue * percent / 100).toFixed(2);
+        const total = (parseFloat(mmkValue) + parseFloat(profit)).toFixed(2);
+
+        cells[4].textContent = mmk ? mmkValue : '-';
+        cells[5].textContent = mmk ? profit : '-';
+        cells[6].textContent = mmk ? total : '-';
+
+        dataIndex++;
+      }
+    }
+
+    function setTheme(themeName) {
+      document.body.className = themeName;
+    }
+
+    mmkInput.addEventListener('input', updateTable);
+    profitSelect.addEventListener('change', updateTable);
+    createTable();
   </script>
 </body>
 </html>
+<br><br>
+<div style="display:flex; gap:6px; flex-wrap:wrap;">
+  <a href="https://t.me/HLdigitalproduct" target="_blank" style="flex:1;">
+    <button style="background-color:#000000; color:white; padding:6px 12px; border:none; border-radius:5px; font-size:12px; cursor:pointer; width:100%;">
+      📢 Channel Join မယ်
+    </button>
+  </a>
+  <a href="https://t.me/HLdigitalproduct" target="_blank" style="flex:1;">
+    <button style="background-color:#000000; color:white; padding:6px 12px; border:none; border-radius:5px; font-size:12px; cursor:pointer; width:100%;">
+      💎 Diamond ထည့်မယ်
+    </button>
+  </a>
+</div>
